<resources>
    <string name="app_name">TaskBook</string>
    <string name="add_new_task_to_do">Dodaj nowe zadanie</string>
    <string name="show_todo">Sortuj wg. daty</string>
    <string name="submit">add</string>
    <string name="title">title</string>
    <string name="when">deadline</string>
    <string name="high_priority">high priority</string>
    <string name="medium_priority">medium priority</string>
    <string name="low_priority">low priority</string>
    <string name="show_high">Pokaż bardzo ważne</string>
    <string name="show_medium">Pokaż średnio ważne</string>
    <string name="show_low">Pokaż mało ważne</string>
    <string name="sort_by_importance">Sortuj wg. ważności</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="logowanie">Login</string>
    <string name="zaloguj">Log in</string>
    <string name="rejestracja">register</string>
    <string name="imi_i_nazwisko">fullname</string>
    <string name="email">E-mail</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_maecenas_in_tellus_et_arcu_fringilla_molestie_vitae_in_odio_nulla_et_massa_mauris_nunc_iaculis_porta_risus_ac_consequat_sed_aliquam_libero_vitae_nibh_condimentum_eget_blandit_sapien_dictum_phasellus_quis_cursus_quam_ut_auctor_tellus_fusce_sit_amet_augue_vitae_ligula_ornare_consequat_nec_eget_purus_vivamus_gravida_in_nisl_a_laoreet_donec_id_vehicula_nisi_nullam_id_leo_accumsan_viverra_felis_bibendum_iaculis_nibh_aenean_vulputate_auctor_mauris_vel_fermentum_proin_eget_sagittis_magna_cras_at_tincidunt_ex_fusce_nec_ligula_non_lectus_euismod_scelerisque_aliquam_porta_nunc_a_mollis_tristique_duis_non_leo_sit_amet_est_egestas_feugiat_quis_sit_amet_turpis_donec_eget_placerat_mauris_fusce_accumsan_magna_vitae_sagittis_gravida_neque_ipsum_finibus_neque_ut_semper_lorem_neque_non_turpis_sed_vel_dui_sit_amet_dolor_ultricies_mollis_quis_vel_massa_etiam_dictum_tristique_semper_etiam_posuere_iaculis_lorem_dignissim_accumsan_sapien_elementum_vitae_suspendisse_tristique_arcu_sit_amet_ligula_maximus_accumsan_sed_scelerisque_dolor_in_tortor_vulputate_vulputate_nullam_fermentum_nec_metus_id_egestas_curabitur_a_vehicula_nulla_mauris_a_libero_sit_amet_velit_fermentum_convallis_ac_quis_magna_donec_tincidunt_velit_eget_nibh_commodo_at_porta_arcu_laoreet_ut_in_libero_in_est_facilisis_feugiat_quis_nec_eros_duis_venenatis_dolor_sem_ut_fermentum_dolor_pellentesque_ac_cras_eu_dui_massa_cras_lorem_erat_sagittis_eleifend_urna_quis_finibus_commodo_nunc_mauris_imperdiet_facilisis_turpis_quis_mollis_aliquam_finibus_vehicula_lacus_vitae_efficitur_nulla_eget_tincidunt_massa_quisque_tortor_sem_consectetur_eleifend_faucibus_quis_aliquam_vitae_odio_pellentesque_et_magna_dolor_quisque_gravida_sit_amet_tellus_id_condimentum_nunc_elementum_lectus_massa_sed_blandit_neque_faucibus_fringilla_maecenas_mollis_molestie_diam_nec_pulvinar_sem_tristique_vel_aliquam_euismod_in_enim_non_molestie_nam_lobortis_eget_leo_vel_laoreet_pellentesque_iaculis_ex_id_magna_egestas_tristique_ut_nec_metus_vitae_lacus_ullamcorper_imperdiet_in_ac_laoreet_lacus_morbi_eget_ipsum_fermentum_ultrices_dolor_in_rutrum_lorem_in_lacus_urna_blandit_eget_leo_vitae_sagittis_euismod_nisl_nunc_id_elit_eleifend_consequat_nulla_et_suscipit_odio_vivamus_aliquet_lorem_sit_amet_purus_ultricies_tempus_mauris_venenatis_dolor_eget_nibh_pretium_cursus_maecenas_non_tristique_ex_morbi_pulvinar_nunc_ut_sapien_efficitur_suscipit_vestibulum_laoreet_magna_vel_rutrum_sodales_erat_nulla_pharetra_mi_quis_laoreet_orci_dolor_sit_amet_magna_pellentesque_neque_est_ultricies_eget_condimentum_vel_facilisis_condimentum_dolor_quisque_sagittis_lacus_quis_quam_bibendum_egestas_nec_quis_mi_sed_feugiat_laoreet_tristique_phasellus_vestibulum_orci_tellus_eu_dapibus_sapien_hendrerit_et_maecenas_tincidunt_id_diam_quis_maximus_mauris_sit_amet_ante_risus_aenean_non_ex_at_diam_tincidunt_vestibulum_sit_amet_sed_mauris_quisque_consectetur_lacinia_tortor_etiam_quam_orci_interdum_at_nisi_et_varius_cursus_quam_donec_dapibus_nisi_turpis_sit_amet_varius_erat_condimentum_nec">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas in tellus et arcu fringilla molestie vitae in odio. Nulla et massa mauris. Nunc iaculis porta risus ac consequat. Sed aliquam libero vitae nibh condimentum, eget blandit sapien dictum. Phasellus quis cursus quam, ut auctor tellus. Fusce sit amet augue vitae ligula ornare consequat nec eget purus. Vivamus gravida in nisl a laoreet. Donec id vehicula nisi. Nullam id leo accumsan, viverra felis bibendum, iaculis nibh. Aenean vulputate auctor mauris vel fermentum. Proin eget sagittis magna. Cras at tincidunt ex. Fusce nec ligula non lectus euismod scelerisque. Aliquam porta nunc a mollis tristique. Duis non leo sit amet est egestas feugiat quis sit amet turpis. Donec eget placerat mauris. Fusce accumsan, magna vitae sagittis gravida, neque ipsum finibus neque, ut semper lorem neque non turpis. Sed vel dui sit amet dolor ultricies mollis quis vel massa. Etiam dictum tristique semper. Etiam posuere iaculis lorem, dignissim accumsan sapien elementum vitae. Suspendisse tristique arcu sit amet ligula maximus accumsan. Sed scelerisque dolor in tortor vulputate vulputate. Nullam fermentum nec metus id egestas. Curabitur a vehicula nulla. Mauris a libero sit amet velit fermentum convallis ac quis magna. Donec tincidunt velit eget nibh commodo, at porta arcu laoreet. Ut in libero in est facilisis feugiat quis nec eros. Duis venenatis dolor sem, ut fermentum dolor pellentesque ac. Cras eu dui massa. Cras lorem erat, sagittis eleifend urna quis, finibus commodo nunc. Mauris imperdiet facilisis turpis quis mollis. Aliquam finibus vehicula lacus vitae efficitur. Nulla eget tincidunt massa. Quisque tortor sem, consectetur eleifend faucibus quis, aliquam vitae odio. Pellentesque et magna dolor. Quisque gravida sit amet tellus id condimentum. Nunc elementum lectus massa, sed blandit neque faucibus fringilla. Maecenas mollis molestie diam, nec pulvinar sem tristique vel. Aliquam euismod in enim non molestie. Nam lobortis eget leo vel laoreet. Pellentesque iaculis ex id magna egestas tristique. Ut nec metus vitae lacus ullamcorper imperdiet. In ac laoreet lacus. Morbi eget ipsum fermentum, ultrices dolor in, rutrum lorem. In lacus urna, blandit eget leo vitae, sagittis euismod nisl. Nunc id elit eleifend, consequat nulla et, suscipit odio. Vivamus aliquet lorem sit amet purus ultricies tempus. Mauris venenatis dolor eget nibh pretium cursus. Maecenas non tristique ex. Morbi pulvinar nunc ut sapien efficitur suscipit. Vestibulum laoreet, magna vel rutrum sodales, erat nulla pharetra mi, quis laoreet orci dolor sit amet magna. Pellentesque neque est, ultricies eget condimentum vel, facilisis condimentum dolor. Quisque sagittis lacus quis quam bibendum egestas nec quis mi. Sed feugiat laoreet tristique. Phasellus vestibulum orci tellus, eu dapibus sapien hendrerit et. Maecenas tincidunt id diam quis maximus. Mauris sit amet ante risus. Aenean non ex at diam tincidunt vestibulum sit amet sed mauris. Quisque consectetur lacinia tortor. Etiam quam orci, interdum at nisi et, varius cursus quam. Donec dapibus nisi turpis, sit amet varius erat condimentum nec.</string>
    <string name="about">About</string>
    <string name="priority">Priority</string>
    <string name="data">Data</string>
</resources>