<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logowanie"
        />

    <EditText
        android:id="@+id/username"

        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/password"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/zaloguj"
        />

    <TextView
        android:id="@+id/register"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rejestracja"
        />

</LinearLayout>