<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <Button
        android:id="@+id/AddNewTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task_to_do"
        android:onClick="addNewTask"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/addNewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="add new group"
        android:onClick="addNewGroup"
        android:textSize="20sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="597dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bottom_nav"
            app:menu="@menu/bottom_nav"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showToDo"
            android:text="@string/show_todo" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sortByImportance"
            android:text="@string/sort_by_importance" />

    </LinearLayout>


</LinearLayout>